2004-03-22  Ilja Booij  <ilja@ic-s.nl>

	* imapcommands.c (_ic_list): change to how regex patterns are 
	constructed to allow LIST to work on shared mailboxes

	* main.c (main): now allows two or more arguments to a getopt()
	option.

2004-03-19  Ilja Booij  <ilja@ic-s.nl>

	* pipe.c (discard_client_input): new function, used to empty a 
	file stream coming from a client.

	* lmtp.c (lmtp): messages with headers that are bigger than 
	READ_BLOCK_SIZE are rejected. Some changes were made to make sure
	that we don't get anymore data from the client before sending 
	a message indicating the failure.

	* main.c (main): now rejects headers that are bigger than READ_BLOCK_SIZE.
	This lets dbmail-smtp fail with a "data format error".

2004-03-18  Ilja Booij  <ilja@ic-s.nl>

	* sql/postgresql/migrate_from_1.x_to_2.0.pgsql: added pbsp table

	* sql/mysql/migrate_from_1.x_to_2.0.mysql: added pbsp table

	* sql/mysql/migrate_from_1.x_to_2.0_innodb.mysql: added pbsp table.

	* sql/mysql/create_tables.mysql: added pbsp table.

	* sql/postgresql/create_tables.pgsql: added pbsp table.

	* sql/mysql/create_tables_innoDB.mysql: added pbsp table.

	* pipe.c (store_message_temp): the strblock and tmpline buffers
	were not properly initialised, because they were not set to 
	contain only '\0's, which was problematic for messages containing
	an empty body.

2004-03-16  Ilja Booij  <ilja@ic-s.nl>

	* dbmsgbuf.c (db_dump_range): now only adds '\r' to every line
	if no preceeding '\r' has been found before the '\n'.

	* mime.c: removed mime_list() function because it was unused.
	(mime_readheader): now deals correctly with messages that
	have '\r\n' instead of '\n' as end of line markers.
	(is_end_of_header): function for signaling the end of a header

	* mime.h: removed mime_list() function because it was unused.

2004-03-15  Ilja Booij  <ilja@ic-s.nl>

	* mysql/dbmysql.c: added quotes around TO_DATE string

	* db.c (db_insert_physmessage_with_internal_date): removed the